docs(deploy): playit host kit + Model A (clone & rebuild) updater
- Note that custom TCP tunnels require playit Premium.
- Add 'host builds from the repo' section (systemd unit + laptop no-suspend).
- scripts/host-deploy.sh: pull, rebuild engine+web, refresh jar, restart service.